# dvbt2mod

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows.yml
docs/: README.ru.md
scripts/: package_windows.sh
src/: main.cpp
tests/: cli_test.py  golden_test.py  windows_pipe_probe.cpp
